force-app/main/default/objects/DocumentGenConfig__c/DocumentGenConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for Document Generation Framework</description>
    <label>Document Generation Config</label>
</CustomObject>