force-app/main/default/objects/DocumentGenConfig__c/fields/EnableLogging__c.field-meta.xml
<CustomField>
    <fullName>EnableLogging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable detailed logging for document generation</description>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>