force-app/main/default/objects/DocumentGenConfig__c/fields/GASApiKey__c.field-meta.xml
<CustomField>
    <fullName>GASApiKey__c</fullName>
    <description>API Key for authenticating requests to Google Apps Script</description>
    <label>GAS API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>