force-app/main/default/objects/DocumentGenConfig__c/fields/GASTimeoutMs__c.field-meta.xml
<CustomField>
    <fullName>GASTimeoutMs__c</fullName>
    <defaultValue>120000</defaultValue>
    <description>Timeout in milliseconds for GAS callouts</description>
    <label>GAS Timeout (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>