force-app/main/default/objects/DocumentGenConfig__c/fields/GASWebAppUrl__c.field-meta.xml
<CustomField>
    <fullName>GASWebAppUrl__c</fullName>
    <description>Google Apps Script Web App URL for document generation</description>
    <label>GAS Web App URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>