force-app/main/default/objects/DocumentGenConfig__c/fields/MaxDocsPerBatch__c.field-meta.xml
<CustomField>
    <fullName>MaxDocsPerBatch__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Maximum number of documents to process in a single batch</description>
    <label>Max Docs Per Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>